live chat feed implemented
